--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -58,7 +58,7 @@ QPushButton:pressed {
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>80</y>
+      <y>90</y>
       <width>701</width>
       <height>351</height>
      </rect>
@@ -70,7 +70,7 @@ QPushButton:pressed {
      </sizepolicy>
     </property>
     <property name="currentIndex">
-     <number>6</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -96,7 +96,7 @@ QPushButton:pressed {
        <rect>
         <x>10</x>
         <y>30</y>
-        <width>251</width>
+        <width>215</width>
         <height>241</height>
        </rect>
       </property>
@@ -106,16 +106,28 @@ QPushButton:pressed {
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>215</width>
+        <height>241</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>215</width>
+        <height>241</height>
+       </size>
+      </property>
       <property name="font">
        <font>
         <pointsize>8</pointsize>
        </font>
       </property>
       <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAsNeeded</enum>
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
       <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarAsNeeded</enum>
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
       <property name="showGrid">
        <bool>true</bool>
@@ -219,7 +231,7 @@ QPushButton:pressed {
        </property>
        <property name="font">
         <font>
-         <pointsize>6</pointsize>
+         <pointsize>8</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
@@ -249,6 +261,15 @@ QPushButton:pressed {
          <green>255</green>
          <blue>255</blue>
         </color>
+       </property>
+       <property name="foreground">
+        <brush brushstyle="NoBrush">
+         <color alpha="255">
+          <red>0</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
        </property>
       </column>
       <column>
@@ -448,9 +469,21 @@ QPushButton:pressed {
        <rect>
         <x>340</x>
         <y>30</y>
-        <width>251</width>
+        <width>215</width>
         <height>241</height>
        </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>215</width>
+        <height>241</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>215</width>
+        <height>241</height>
+       </size>
       </property>
       <property name="font">
        <font>
@@ -458,10 +491,10 @@ QPushButton:pressed {
        </font>
       </property>
       <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAsNeeded</enum>
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
       <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarAsNeeded</enum>
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
       <property name="showGrid">
        <bool>true</bool>
