[GUI] Setting saving and reading implemented. Signed-off-by: Matej Haulik <matej.haulik@gmail.com>

--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -1488,6 +1488,9 @@ QPushButton:pressed {
    <property name="text">
     <string>Tools Settings</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
+   </property>
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
