--- a/gui/setup_dialog.ui
+++ b/gui/setup_dialog.ui
@@ -25,6 +25,30 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QComboBox,
+QLineEdit,
+QProgressBar,
+QTabWidget,
+QTextEdit,
+QPlainTextEdit {	
+	border: 1px groove gray;
+	border-radius: 4px;
+	padding: 2px 2px;
+}
+
+QPushButton {
+	border-style: outset;
+	border-width: 16px;
+	border: 2px groove gray;
+	border-radius: 4px;
+	padding: 2px 4px;
+}
+
+QPushButton:pressed {
+	border-style: inset;
+}</string>
+  </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
@@ -192,6 +216,8 @@
      </layout>
     </widget>
    </widget>
+   <zorder>groupBox_5</zorder>
+   <zorder>groupBox</zorder>
   </widget>
   <widget class="QPushButton" name="SetupOkButton">
    <property name="geometry">
