[GUI] Problem with seg. fault fixed. Add base SPI macros. Signed-off-by: Marek Belisko <marek.belisko@open-nandra.com>

--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -72,7 +72,7 @@ QPushButton:pressed {
      </sizepolicy>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>6</number>
     </property>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -1830,7 +1830,7 @@ QPushButton:pressed {
        <rect>
         <x>20</x>
         <y>30</y>
-        <width>521</width>
+        <width>661</width>
         <height>27</height>
        </rect>
       </property>
@@ -1840,7 +1840,7 @@ QPushButton:pressed {
        <rect>
         <x>20</x>
         <y>90</y>
-        <width>521</width>
+        <width>661</width>
         <height>27</height>
        </rect>
       </property>
@@ -1879,6 +1879,41 @@ QPushButton:pressed {
       </property>
       <property name="text">
        <string>Communication</string>
+      </property>
+     </widget>
+     <widget class="QToolButton" name="spi_m1">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>150</y>
+        <width>25</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="mouseTracking">
+       <bool>false</bool>
+      </property>
+      <property name="toolTip">
+       <string>SPI status</string>
+      </property>
+      <property name="text">
+       <string>M1</string>
+      </property>
+     </widget>
+     <widget class="QToolButton" name="spi_m2">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>150</y>
+        <width>25</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="toolTip">
+       <string>Read SPI data</string>
+      </property>
+      <property name="text">
+       <string>M2</string>
       </property>
      </widget>
     </widget>
