--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -2001,31 +2001,6 @@ QPushButton:pressed {
      <attribute name="title">
       <string>Programming</string>
      </attribute>
-     <widget class="QPlainTextEdit" name="UploadTextEdit">
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>30</y>
-        <width>411</width>
-        <height>281</height>
-       </rect>
-      </property>
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="acceptDrops">
-       <bool>false</bool>
-      </property>
-      <property name="undoRedoEnabled">
-       <bool>false</bool>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
@@ -2208,6 +2183,19 @@ QPushButton:pressed {
       </property>
       <property name="text">
        <string/>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="UploadTextEdit">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>30</y>
+        <width>411</width>
+        <height>281</height>
+       </rect>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
