[GUI] Change application name. Signed-off-by: Marek Belisko <marek.belisko@gmail.com>

--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>QTLiqrf</string>
+   <string>IQRF IDE</string>
   </property>
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
